--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,15 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  files:
+    image: nginx:1.25-alpine
+    container_name: spatial-asset-manager-files
+    restart: unless-stopped
+    ports:
+      - "8080:80"
+    volumes:
+      - nas_data:/data:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
   ingest:
     build:
       context: .
@@ -35,10 +44,56 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-sam_password}
       POSTGRES_DB: ${POSTGRES_DB:-spatial_asset_manager}
       NAS_DATA_ROOT: /data/nas
-      NAS_HOST_ROOT: ${NAS_DATA_ROOT}
+      NAS_HOST_ROOT: ${NAS_SMB_DEVICE}
+      PUBLIC_BASE_URL: ${PUBLIC_BASE_URL}
+      DERIV_ROOT: /data/nas/result
       PYTHONDONTWRITEBYTECODE: "1"
     volumes:
       - ./:/app:ro
-      - ${NAS_DATA_ROOT}:/data/nas:ro
+      - nas_data:/data/nas:ro
     working_dir: /app
     profiles: ["ingest"]
+  derive:
+    build:
+      context: .
+      dockerfile: scripts/ingest/Dockerfile
+    container_name: spatial-asset-manager-derive
+    environment:
+      NAS_DATA_ROOT: /data/nas
+    volumes:
+      - ./:/app:ro
+      - nas_data_rw:/data/nas
+    working_dir: /app
+    entrypoint: ["python", "scripts/derive/generate_derivatives.py"]
+    profiles: ["derive"]
+  api:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+    container_name: spatial-asset-manager-api
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      POSTGRES_USER: ${POSTGRES_USER:-sam}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-sam_password}
+      POSTGRES_DB: ${POSTGRES_DB:-spatial_asset_manager}
+      STAC_BASE_PATH: /stac
+    ports:
+      - "8081:8000"
+
+volumes:
+  nas_data:
+    driver: local
+    driver_opts:
+      type: cifs
+      device: "${NAS_SMB_DEVICE}"
+      o: "username=${NAS_SMB_USER},password=${NAS_SMB_PASS},vers=3.0,ro,uid=101,gid=101,cache=strict,actimeo=1,rsize=1048576,wsize=1048576"
+  nas_data_rw:
+    driver: local
+    driver_opts:
+      type: cifs
+      device: "${NAS_SMB_DEVICE}"
+      o: "username=${NAS_SMB_USER},password=${NAS_SMB_PASS},vers=3.0,uid=101,gid=101,cache=strict,actimeo=1,rsize=1048576,wsize=1048576"
